/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    java
    alias(libs.plugins.lombok)
    alias(libs.plugins.git.version)
    alias(libs.plugins.shadow)
}

dependencies {
    //implementation(libs.com.alpsbte.alpslib.alpslib.libpsterra) CURRENTLY BROKEN
    implementation(libs.alpslib.io)
    implementation(libs.alpslib.utils)   {
        exclude(group = "com.github.cryptomorin", module = "XSeries")
    }
    implementation(libs.com.alpsbte.canvas)
    implementation(libs.net.daporkchop.lib.binary)
    implementation(libs.com.github.cryptomorin.xseries)
    implementation(libs.net.wesjd.anvilgui)
    implementation(libs.micycle.clipper2)
    implementation(libs.org.json.json)
    implementation(libs.com.google.code.gson.gson)
    implementation(libs.com.squareup.okhttp3.okhttp.jvm)
    implementation(libs.javaapiforkml) {
        exclude(group = "com.sun.xml.bind", module = "jaxb-xjc") // Else Remapping will yell of duplicated classes
    }
    implementation(libs.com.googlecode.json.simple)
    implementation(platform(libs.fawe.bom))
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Core")
    compileOnly("com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit") { isTransitive = false }
    compileOnly(libs.io.papermc.paper.paper.api)
}

val versionDetails: groovy.lang.Closure<com.palantir.gradle.gitversion.VersionDetails> by extra
val details = versionDetails()

group = "net.buildtheearth"
version = "0.2.0" + "-" + details.gitHash + "-SNAPSHOT"
description = "BuildTeamTools"
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

tasks.shadowJar {
    // Exclude annotation classes (e.g. org.jetbrains.annotations)
    exclude("org/jetbrains/annotations/**")
    // Exclude slf4j classes
    exclude("org/slf4j/**")
    archiveClassifier = ""

    relocationPrefix = "net.buildtheearth.buildteamtools.shaded"
    enableAutoRelocation = true
}

tasks.assemble {
    dependsOn(tasks.shadowJar) // Ensure that the shadowJar task runs before the build task
}

tasks.jar {
    archiveClassifier = "UNSHADED"
    enabled = false // Disable the default jar task since we are using shadowJar
}

tasks.processResources {
    // work around IDEA-296490
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    with(copySpec {
        from("src/main/resources/plugin.yml") {
            expand(
                mapOf(
                    "version" to project.version,
                    "description" to project.description
                )
            )
        }
    })
}
